// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pseudo-class props should generate pseudo-class CSS 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-0:hover {
  color: rgb(0,94,166);
}

.emotion-0:active,
.emotion-0[data-active=true] {
  color: rgb(0,62,130);
}

.emotion-0:focus {
  color: rgb(3,44,94);
}

.emotion-0:visited {
  color: rgb(226,37,37);
}

.emotion-0:nth-of-type(even) {
  padding: 0.75rem;
}

.emotion-0:nth-of-type(odd) {
  margin: 0.5rem;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  padding-top: 0.75rem;
}

.emotion-0:checked,
.emotion-0[aria-checked=true] {
  padding-right: 0.75rem;
}

.emotion-0:indeterminate,
.emotion-0[aria-checked=mixed] {
  padding-bottom: 0.75rem;
}

.emotion-0[aria-selected=true] {
  padding-left: 0.75rem;
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  margin-top: 0.75rem;
}

.emotion-0[aria-pressed=true] {
  margin-right: 0.75rem;
}

.emotion-0[aria-readonly=true],
.emotion-0[readonly] {
  margin-bottom: 0.75rem;
}

.emotion-0:first-of-type {
  margin-left: 0.75rem;
}

.emotion-0:last-of-type {
  color: rgb(179,211,233);
}

.emotion-0[aria-expanded=true] {
  color: rgb(200,204,207);
}

.emotion-0[aria-grabbed=true] {
  color: rgb(0,153,74);
}

.emotion-0:not(:first-of-type) {
  color: rgb(228,98,22);
}

.emotion-0:not(:last-of-type) {
  color: rgb(168,62,0);
}

.emotion-0:before {
  content: "Before text";
  position: absolute;
  bottom: 0;
  left: 0;
}

.emotion-0:after {
  content: "After text";
  position: absolute;
  bottom: 0;
  left: 0;
}

.emotion-0:focus-within {
  color: rgb(112,117,120);
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    PseudoBox
  </span>
</div>
`;

exports[`as should render as a provided HTML element 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  className="emotion-1"
>
  <label
    className="emotion-0"
    data-paste-element="TEXT"
  >
    background single
  </label>
</div>
`;

exports[`color should set a color property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    color single
  </span>
</div>
`;

exports[`color should set a responsive color property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(226,37,37);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    color: rgb(0,153,74);
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    color responsive
  </span>
</div>
`;

exports[`display should set a display property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    display single
  </span>
</div>
`;

exports[`display should set a responsive display property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    display: block;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    display responsive
  </span>
</div>
`;

exports[`fontFamily should set a font family property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-family: 'Fira Mono','Courier New',Courier,monospace;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font family single
  </span>
</div>
`;

exports[`fontFamily should set a responsive font family property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-family: 'Fira Mono','Courier New',Courier,monospace;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font family responsive
  </span>
</div>
`;

exports[`fontSize should set a font size property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.625rem;
  line-height: 1.25rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font size single
  </span>
</div>
`;

exports[`fontSize should set a responsive font size property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.75rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font size responsive
  </span>
</div>
`;

exports[`fontStyle should set a font style property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-style: italic;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font style single
  </span>
</div>
`;

exports[`fontStyle should set a responsive font style property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-style: italic;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-style: normal;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font style responsive
  </span>
</div>
`;

exports[`fontWeight should set a font weight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 700;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font weight single
  </span>
</div>
`;

exports[`fontWeight should set a responsive font weight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 300;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-weight: 500;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    font weight responsive
  </span>
</div>
`;

exports[`letterSpacing should set a letter spacing property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    letter spacing single
  </span>
</div>
`;

exports[`letterSpacing should set a responsive letter spacing property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -2px;
  -moz-letter-spacing: -2px;
  -ms-letter-spacing: -2px;
  letter-spacing: -2px;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    -webkit-letter-spacing: 3px;
    -moz-letter-spacing: 3px;
    -ms-letter-spacing: 3px;
    letter-spacing: 3px;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    letter spacing responsive
  </span>
</div>
`;

exports[`lineHeight should set a line height property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    line height single
  </span>
</div>
`;

exports[`lineHeight should set a responsive line height property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    line-height: 1.25rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    line height responsive
  </span>
</div>
`;

exports[`margin should set a margin property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0.125rem;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    margin single
  </span>
</div>
`;

exports[`margin should set a responsive margin property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0.25rem;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    margin responsive
  </span>
</div>
`;

exports[`marginBottom should set a marginBottom property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginBottom single
  </span>
</div>
`;

exports[`marginBottom should set a responsive marginBottom property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginBottom responsive
  </span>
</div>
`;

exports[`marginLeft should set a marginLeft property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginLeft single
  </span>
</div>
`;

exports[`marginLeft should set a responsive marginLeft property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-left: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginLeft responsive
  </span>
</div>
`;

exports[`marginRight should set a marginRight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-right: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginRight single
  </span>
</div>
`;

exports[`marginRight should set a responsive marginRight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-right: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-right: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginRight responsive
  </span>
</div>
`;

exports[`marginTop should set a marginTop property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginTop single
  </span>
</div>
`;

exports[`marginTop should set a responsive marginTop property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    marginTop responsive
  </span>
</div>
`;

exports[`padding should set a padding property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0.125rem;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    padding single
  </span>
</div>
`;

exports[`padding should set a responsive padding property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0.25rem;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    padding responsive
  </span>
</div>
`;

exports[`paddingBottom should set a paddingBottom property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-bottom: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingBottom single
  </span>
</div>
`;

exports[`paddingBottom should set a responsive paddingBottom property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-bottom: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-bottom: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingBottom responsive
  </span>
</div>
`;

exports[`paddingLeft should set a paddingLeft property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingLeft single
  </span>
</div>
`;

exports[`paddingLeft should set a responsive paddingLeft property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-left: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingLeft responsive
  </span>
</div>
`;

exports[`paddingRight should set a paddingRight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-right: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingRight single
  </span>
</div>
`;

exports[`paddingRight should set a responsive paddingRight property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-right: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-right: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingRight responsive
  </span>
</div>
`;

exports[`paddingTop should set a paddingTop property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-top: 0.125rem;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingTop single
  </span>
</div>
`;

exports[`paddingTop should set a responsive paddingTop property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-top: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-top: 0.5rem;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    paddingTop responsive
  </span>
</div>
`;

exports[`textAlign should set a responsive textAlign property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    text-align: left;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    textAlign responsive
  </span>
</div>
`;

exports[`textAlign should set a textAlign property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: right;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
  >
    textAlign single
  </span>
</div>
`;

exports[`textDecoration should set a responsive textDecoration property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    -webkit-text-decoration: normal;
    text-decoration: normal;
  }
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
    textDecoration={
      Array [
        "underline",
        "normal",
      ]
    }
  >
    textDecoration responsive
  </span>
</div>
`;

exports[`textDecoration should set a textDecoration property 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
    data-paste-element="TEXT"
    textDecoration="underline"
  >
    textDecoration single
  </span>
</div>
`;
